--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yaratıcı Drama Hareketi</title>
+    <title>Yaratıcı Drama Harekatı</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Yaratıcı Drama Hareketi</h1>
+            <h1>Yaratıcı Drama Haraketı</h1>
             <nav>
                 <ul>
                     <li><a href="#hakkimizda">Hakkımızda</a></li>
@@ -24,7 +24,7 @@
 
     <section id="hero" class="hero-section">
         <div class="container">
-            <h2>Yaratıcılığın ve Eğitimin Buluştuğu Nokta</h2>
+            <h2>Herkes için özgün ve özgür Yaratıcı Drama Eğitimleri!</h2>
             <p>Yaratıcı drama ile hayata dokunuyor, bireyin ve toplumun gelişimine katkıda bulunuyoruz.</p>
             <a href="#egitimler" class="button">Eğitimlerimizi Keşfet</a>
         </div>
@@ -33,8 +33,8 @@
     <section id="hakkimizda" class="about-section">
         <div class="container">
             <h2>Hakkımızda</h2>
-            <p>Yaratıcı Drama Hareketi olarak, drama tekniklerini kullanarak bireylerin kendilerini ifade etme, empati kurma ve problem çözme becerilerini geliştirmeyi hedefliyoruz. Çeşitli yaş gruplarına ve kurumlara yönelik eğitimler düzenleyerek yaratıcılığı ve eleştirel düşünmeyi teşvik ediyoruz.</p>
-            <p>Amacımız, drama ile öğrenmeyi keyifli hale getirmek ve katılımcılara unutulmaz deneyimler sunmaktır. Eğitmen kadromuz, alanında uzman ve deneyimli kişilerden oluşmaktadır.</p>
+            <p>Yaratıcı Drama Harekatı olarak, drama tekniklerini kullanarak bireylerin kendilerini ifade etme, empati kurma ve problem çözme becerilerini geliştirmeyi hedefliyoruz. Çeşitli yaş gruplarına ve kurumlara yönelik eğitimler düzenleyerek yaratıcılığı ve eleştirel düşünmeyi teşvik ediyoruz.</p>
+            <p>Amacımız, drama ile öğrenmeyi keyifli hale getirmek ve katılımcılara unutulmaz deneyimler sunmaktır. </p>
         </div>
     </section>
 
