--- a/index.html
+++ b/index.html
@@ -3,102 +3,200 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yaratıcı Drama Harekatı</title>
+    <title>Yaratıcı Drama Harekatı - Türkiye'nin Özgün ve Özgür Sanat Operasyonu</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <header>
+    <header class="main-header">
         <div class="container">
-            <h1>Yaratıcı Drama Haraketı</h1>
-            <nav>
+            <h1 class="logo">Yaratıcı Drama Harekatı</h1>
+            <nav class="main-nav">
                 <ul>
                     <li><a href="#hakkimizda">Hakkımızda</a></li>
-                    <li><a href="#egitimler">Eğitimlerimiz</a></li>
-                    <li><a href="#videolar">Röportajlar & Videolar</a></li>
+                    <li><a href="#etkinlikler">Etkinliklerimiz</a></li>
+                    <li><a href="#basarilarimiz">Başarılarımız</a></li>
+                    <li><a href="#roportajlar">Röportajlar & Webinarlar</a></li>
                     <li><a href="#iletisim">İletişim</a></li>
                 </ul>
             </nav>
+            <button class="nav-toggle" aria-label="Menü Aç/Kapat">
+                <i class="fas fa-bars"></i>
+            </button>
         </div>
     </header>
 
-    <section id="hero" class="hero-section">
+    <section class="hero-section">
         <div class="container">
-            <h2>Herkes için özgün ve özgür Yaratıcı Drama Eğitimleri!</h2>
-            <p>Yaratıcı drama ile hayata dokunuyor, bireyin ve toplumun gelişimine katkıda bulunuyoruz.</p>
-            <a href="#egitimler" class="button">Eğitimlerimizi Keşfet</a>
+            <div class="hero-content">
+                <h2>Türkiye'nin Özgün ve Özgür Sanat Operasyonu</h2>
+                <p>Yaratıcı Drama Harekatı olarak, 2021 Ocak ayından bu yana sanatı ve eğitimi bir araya getirerek binlerce hayat dokunduk. Her yaştan insanı yaratıcı drama ile tanıştırmaya devam ediyoruz.</p>
+                <a href="#etkinlikler" class="btn-primary">Etkinliklerimizi Keşfedin</a>
+            </div>
         </div>
     </section>
 
-    <section id="hakkimizda" class="about-section">
+    <section id="hakkimizda" class="about-section section-padding">
         <div class="container">
-            <h2>Hakkımızda</h2>
-            <p>Yaratıcı Drama Harekatı olarak, drama tekniklerini kullanarak bireylerin kendilerini ifade etme, empati kurma ve problem çözme becerilerini geliştirmeyi hedefliyoruz. Çeşitli yaş gruplarına ve kurumlara yönelik eğitimler düzenleyerek yaratıcılığı ve eleştirel düşünmeyi teşvik ediyoruz.</p>
-            <p>Amacımız, drama ile öğrenmeyi keyifli hale getirmek ve katılımcılara unutulmaz deneyimler sunmaktır. </p>
+            <h3>Biz Kimiz?</h3>
+            <p>2021 Ocak ayında Semih Özbilen tarafından Sakarya, Maltepe'de kurulan Yaratıcı Drama Harekatı, toplumsal değişimi ve bireysel gelişimi yaratıcı drama ile destekleyen bir sosyal girişimdir. Misyonumuz, yaratıcı dramanın dönüştürücü gücünü en geniş kitlelere ulaştırmaktır.</p>
+            <p>Eğitimlerimizde sadece sahneye çıkmayı değil, hayatın sahnesinde kendinizi özgürce ifade etmeyi öğretiyoruz. Her yaştan katılımcımıza, içlerindeki potansiyeli keşfetme ve yaratıcılıklarını serbest bırakma fırsatı sunuyoruz.</p>
         </div>
     </section>
 
-    <section id="egitimler" class="education-section">
+    <section id="basarilarimiz" class="achievements-section section-padding">
         <div class="container">
-            <h2>Geçmiş Eğitimlerimiz</h2>
-            <div class="education-grid">
-                <div class="education-item">
-                    <h3>Okul Öncesi Yaratıcı Drama Atölyesi</h3>
-                    <p>Tarih: 15 Mart 2023</p>
-                    <p>Açıklama: Çocukların hayal güçlerini ve sosyal becerilerini geliştirmeye yönelik interaktif atölye çalışması.</p>
+            <h3>Başarılarımızla Gurur Duyuyoruz</h3>
+            <div class="achievement-grid">
+                <div class="achievement-item">
+                    <i class="fas fa-users"></i>
+                    <h4>+20.000 Kişi</h4>
+                    <p>Yaratıcı Drama ile Tanıştı</p>
                 </div>
-                <div class="education-item">
-                    <h3>Lise Öğrencileri İçin Drama ve İfade Becerileri</h3>
-                    <p>Tarih: 22 Nisan 2023</p>
-                    <p>Açıklama: Gençlerin kendilerini daha iyi ifade etmelerini sağlayan, özgüven artırıcı drama etkinlikleri.</p>
+                <div class="achievement-item">
+                    <i class="fas fa-laptop-code"></i>
+                    <h4>+300 Online Eğitim</h4>
+                    <p>Erişilebilir Sanat Her Yerde</p>
                 </div>
-                <div class="education-item">
-                    <h3>Yetişkinler İçin Stres Yönetimi ve Drama</h3>
-                    <p>Tarih: 10 Haziran 2023</p>
-                    <p>Açıklama: Drama teknikleriyle stresle başa çıkma ve rahatlama yöntemleri üzerine bir eğitim.</p>
+                <div class="achievement-item">
+                    <i class="fas fa-chalkboard-teacher"></i>
+                    <h4>+60 Yüz Yüze Eğitim</h4>
+                    <p>Etkileşimin Gücü</p>
                 </div>
-                </div>
+            </div>
         </div>
     </section>
 
-    <section id="videolar" class="video-section">
+    <section id="etkinlikler" class="events-section section-padding">
         <div class="container">
-            <h2>Röportajlar & Videolar</h2>
-            <div class="video-grid">
-                <div class="video-item">
-                    <h3>Uzmanlarla Yaratıcı Drama Üzerine Röportaj</h3>
-                    <div class="video-wrapper">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEONUZUNIDSIBURAYA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
-                    <p>Açıklama: Alanında uzman bir eğitimci ile yaratıcı dramanın faydaları üzerine keyifli bir sohbet.</p>
+            <h3>Sanatın Buluşma Noktası: Etkinliklerimiz</h3>
+            <p>Her ay güncellediğimiz eğitim takvimimizle, hem online hem de yüz yüze atölyelerimizde buluşmaya devam ediyoruz. Gelecek etkinliklerimiz için bizi takip edin!</p>
+            <div class="event-cards">
+                <div class="event-card">
+                    <h4>Online Yaratıcı Drama Atölyeleri</h4>
+                    <p>Ev konforunda sanatla buluşun. Dijital platformlar üzerinden gerçekleştirdiğimiz interaktif atölyelerimizle yaratıcılığınızı geliştirin.</p>
+                    <a href="#" class="btn-secondary">Detaylı Bilgi</a>
                 </div>
-                <div class="video-item">
-                    <h3>Eğitimlerimizden Kesitler</h3>
-                    <div class="video-wrapper">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEONUZUNIDSIBURAYA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
-                    <p>Açıklama: Geçmiş eğitimlerimizden katılımcıların deneyimlerini gösteren kısa bir video.</p>
+                <div class="event-card">
+                    <h4>Yüz Yüze Eğitim Programları</h4>
+                    <p>Gerçek etkileşimin gücüyle, yüz yüze atölyelerimizde derinlemesine bir yaratıcı drama deneyimi yaşayın.</p>
+                    <a href="#" class="btn-secondary">Detaylı Bilgi</a>
                 </div>
-                </div>
+            </div>
         </div>
     </section>
 
-    <section id="iletisim" class="contact-section">
+    <section id="roportajlar" class="interviews-section section-padding">
         <div class="container">
-            <h2>Bize Ulaşın</h2>
-            <p>Projelerimiz ve eğitimlerimiz hakkında daha fazla bilgi almak için bizimle iletişime geçebilirsiniz.</p>
-            <ul>
-                <li>E-posta: info@yaraticidramaharekati.com</li>
-                <li>Telefon: +90 5XX XXX XX XX</li>
-                <li>Sosyal Medya: <a href="https://twitter.com/yaraticidrama" target="_blank">Twitter</a> | <a href="https://facebook.com/yaraticidrama" target="_blank">Facebook</a> | <a href="https://instagram.com/yaraticidrama" target="_blank">Instagram</a></li>
-            </ul>
+            <h3>İlham Veren Sesler: Röportajlar ve Webinarlar</h3>
+            <p>Alanında uzman isimlerle gerçekleştirdiğimiz röportajlar ve webinarlar ile sanatın ve dramanın farklı boyutlarını keşfedin. Bilgiye ve ilhama açılan kapılar.</p>
+            <div class="interview-grid">
+                <div class="interview-item">
+                    <img src="https://via.placeholder.com/150" alt="Robin Pascoe">
+                    <h4>Robin Pascoe</h4>
+                    <p>Uluslararası Drama Uzmanı</p>
+                    <a href="#" class="btn-tertiary">İzle/Oku</a>
+                </div>
+                <div class="interview-item">
+                    <img src="https://via.placeholder.com/150" alt="Ruken Akar Vural">
+                    <h4>Ruken Akar Vural</h4>
+                    <p>Eğitimci & Drama Lideri</p>
+                    <a href="#" class="btn-tertiary">İzle/Oku</a>
+                </div>
+                <div class="interview-item">
+                    <img src="https://via.placeholder.com/150" alt="Patrice Baldwin">
+                    <h4>Patrice Baldwin</h4>
+                    <p>Drama Eğitmeni</p>
+                    <a href="#" class="btn-tertiary">İzle/Oku</a>
+                </div>
+                <div class="interview-item">
+                    <img src="https://via.placeholder.com/150" alt="Mete Akoğuz">
+                    <h4>Mete Akoğuz</h4>
+                    <p>Yaratıcı Drama Uzmanı</p>
+                    <a href="#" class="btn-tertiary">İzle/Oku</a>
+                </div>
+                <div class="interview-item">
+                    <img src="https://via.placeholder.com/150" alt="İhsan Metinnam">
+                    <h4>İhsan Metinnam</h4>
+                    <p>Sanatçı & Yazar</p>
+                    <a href="#" class="btn-tertiary">İzle/Oku</a>
+                </div>
+                <div class="interview-item">
+                    <img src="https://via.placeholder.com/150" alt="Naci Aslan">
+                    <h4>Naci Aslan</h4>
+                    <p>Eğitimci</p>
+                    <a href="#" class="btn-tertiary">İzle/Oku</a>
+                </div>
+            </div>
         </div>
     </section>
 
-    <footer>
+    <section id="iletisim" class="contact-section section-padding">
         <div class="container">
-            <p>&copy; 2025 Yaratıcı Drama Hareketi. Tüm hakları saklıdır.</p>
+            <h3>Bize Ulaşın</h3>
+            <p>Sorularınız, işbirliği teklifleriniz veya sadece merhaba demek için bizimle iletişime geçmekten çekinmeyin. Sanatla dolu dünyamıza hoş geldiniz!</p>
+            <form class="contact-form">
+                <input type="text" placeholder="Adınız Soyadınız" required>
+                <input type="email" placeholder="E-posta Adresiniz" required>
+                <textarea placeholder="Mesajınız" rows="5" required></textarea>
+                <button type="submit" class="btn-primary">Mesaj Gönder</button>
+            </form>
+            <div class="social-links">
+                <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+        </div>
+    </section>
+
+    <footer class="main-footer">
+        <div class="container">
+            <p>&copy; 2025 Yaratıcı Drama Harekatı. Tüm Hakları Saklıdır.</p>
+            <p>Sakarya, Maltepe, Türkiye</p>
         </div>
     </footer>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const navToggle = document.querySelector('.nav-toggle');
+            const mainNav = document.querySelector('.main-nav');
+
+            if (navToggle && mainNav) {
+                navToggle.addEventListener('click', () => {
+                    mainNav.classList.toggle('active');
+                    navToggle.querySelector('i').classList.toggle('fa-bars');
+                    navToggle.querySelector('i').classList.toggle('fa-times');
+                });
+            }
+
+            // Smooth scrolling for navigation links
+            document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+                anchor.addEventListener('click', function (e) {
+                    e.preventDefault();
+
+                    document.querySelector(this.getAttribute('href')).scrollIntoView({
+                        behavior: 'smooth'
+                    });
+                    if (mainNav.classList.contains('active')) {
+                        mainNav.classList.remove('active');
+                        navToggle.querySelector('i').classList.remove('fa-times');
+                        navToggle.querySelector('i').classList.add('fa-bars');
+                    }
+                });
+            });
+
+            // Add scroll effect to header
+            window.addEventListener('scroll', () => {
+                const header = document.querySelector('.main-header');
+                if (window.scrollY > 50) {
+                    header.classList.add('scrolled');
+                } else {
+                    header.classList.remove('scrolled');
+                }
+            });
+        });
+    </script>
 </body>
 </html>
