--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
 <body>
     <header class="main-header">
         <div class="container">
-            <h1 class="logo">Yaratıcı Drama Harekatı</h1>
+            <a href="#" class="logo-link">
+                <img src="https://instagram.fsaw2-2.fna.fbcdn.net/v/t51.2885-19/337430348_171163922430863_4054322155026681634_n.jpg?efg=eyJ2ZW5jb2RlX3RhZyI6InByb2ZpbGVfcGljLmRqYW5nby40NzcuYzIifQ&_nc_ht=instagram.fsaw2-2.fna.fbcdn.net&_nc_cat=111&_nc_oc=Q6cZ2QFnsvbKVRfjW2dFhzLMnwdcrifM1XPNQA6dSUDIY9y60PMvNqhPYd86ndUg8e7E3xY&_nc_ohc=lCD_fwKiLrAQ7kNvwHkjAR6&_nc_gid=k34QpBmhc6K5XnsPkGMeAQ&edm=AP4sbd4BAAAA&ccb=7-5&oh=00_AfT-rliryLrXpvaJaVpB4FV70ZKz-stTJGpJrUY9Qk7jg&oe=68903A59&_nc_sid=7a9f4b" alt="Yaratıcı Drama Harekatı Logo" class="header-logo">
+            </a>
+            <h1 class="site-title">Yaratıcı Drama Harekatı</h1>
             <nav class="main-nav">
                 <ul>
                     <li><a href="#hakkimizda">Hakkımızda</a></li>
                     <li><a href="#etkinlikler">Etkinliklerimiz</a></li>
                     <li><a href="#basarilarimiz">Başarılarımız</a></li>
                     <li><a href="#roportajlar">Röportajlar & Webinarlar</a></li>
+                    <li><a href="#sanat-sifresi">Sanatın Şifresi</a></li>
                     <li><a href="#iletisim">İletişim</a></li>
                 </ul>
             </nav>
@@ -40,7 +44,7 @@
     <section id="hakkimizda" class="about-section section-padding">
         <div class="container">
             <h3>Biz Kimiz?</h3>
-            <p>2021 Ocak ayında Semih Özbilen tarafından Sakarya, Maltepe'de kurulan Yaratıcı Drama Harekatı, toplumsal değişimi ve bireysel gelişimi yaratıcı drama ile destekleyen bir sosyal girişimdir. Misyonumuz, yaratıcı dramanın dönüştürücü gücünü en geniş kitlelere ulaştırmaktır.</p>
+            <p>2021 Ocak ayında **Semih Özbilen** tarafından Sakarya, Maltepe'de kurulan Yaratıcı Drama Harekatı, toplumsal değişimi ve bireysel gelişimi yaratıcı drama ile destekleyen bir sosyal girişimdir. Misyonumuz, yaratıcı dramanın dönüştürücü gücünü en geniş kitlelere ulaştırmaktır.</p>
             <p>Eğitimlerimizde sadece sahneye çıkmayı değil, hayatın sahnesinde kendinizi özgürce ifade etmeyi öğretiyoruz. Her yaştan katılımcımıza, içlerindeki potansiyeli keşfetme ve yaratıcılıklarını serbest bırakma fırsatı sunuyoruz.</p>
         </div>
     </section>
@@ -93,42 +97,71 @@
             <p>Alanında uzman isimlerle gerçekleştirdiğimiz röportajlar ve webinarlar ile sanatın ve dramanın farklı boyutlarını keşfedin. Bilgiye ve ilhama açılan kapılar.</p>
             <div class="interview-grid">
                 <div class="interview-item">
-                    <img src="https://via.placeholder.com/150" alt="Robin Pascoe">
+                    <img src="https://via.placeholder.com/150/FFC0CB/800000?text=R.Pascoe" alt="Robin Pascoe">
                     <h4>Robin Pascoe</h4>
                     <p>Uluslararası Drama Uzmanı</p>
                     <a href="#" class="btn-tertiary">İzle/Oku</a>
                 </div>
                 <div class="interview-item">
-                    <img src="https://via.placeholder.com/150" alt="Ruken Akar Vural">
+                    <img src="https://via.placeholder.com/150/FFC0CB/800000?text=R.A.Vural" alt="Ruken Akar Vural">
                     <h4>Ruken Akar Vural</h4>
                     <p>Eğitimci & Drama Lideri</p>
                     <a href="#" class="btn-tertiary">İzle/Oku</a>
                 </div>
                 <div class="interview-item">
-                    <img src="https://via.placeholder.com/150" alt="Patrice Baldwin">
+                    <img src="https://via.placeholder.com/150/FFC0CB/800000?text=P.Baldwin" alt="Patrice Baldwin">
                     <h4>Patrice Baldwin</h4>
                     <p>Drama Eğitmeni</p>
                     <a href="#" class="btn-tertiary">İzle/Oku</a>
                 </div>
                 <div class="interview-item">
-                    <img src="https://via.placeholder.com/150" alt="Mete Akoğuz">
+                    <img src="https://via.placeholder.com/150/FFC0CB/800000?text=M.Akoğuz" alt="Mete Akoğuz">
                     <h4>Mete Akoğuz</h4>
                     <p>Yaratıcı Drama Uzmanı</p>
                     <a href="#" class="btn-tertiary">İzle/Oku</a>
                 </div>
                 <div class="interview-item">
-                    <img src="https://via.placeholder.com/150" alt="İhsan Metinnam">
+                    <img src="https://via.placeholder.com/150/FFC0CB/800000?text=İ.Metinnam" alt="İhsan Metinnam">
                     <h4>İhsan Metinnam</h4>
                     <p>Sanatçı & Yazar</p>
                     <a href="#" class="btn-tertiary">İzle/Oku</a>
                 </div>
                 <div class="interview-item">
-                    <img src="https://via.placeholder.com/150" alt="Naci Aslan">
+                    <img src="https://via.placeholder.com/150/FFC0CB/800000?text=N.Aslan" alt="Naci Aslan">
                     <h4>Naci Aslan</h4>
                     <p>Eğitimci</p>
                     <a href="#" class="btn-tertiary">İzle/Oku</a>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section id="sanat-sifresi" class="cipher-section section-padding">
+        <div class="container">
+            <h3>Sanatın Şifresi: Zihnin Kilidini Aç</h3>
+            <p>Yaratıcılığın ve zekanın buluştuğu bu özel bölümde, sizleri derin düşüncelere sevk edecek ipuçları bekliyor. Her ipucu, büyük resmi tamamlamanız için bir anahtar. Hazır mısınız?</p>
+
+            <div class="clue-grid">
+                <div class="clue-item" data-clue="clue1">
+                    <i class="fas fa-lightbulb"></i>
+                    <h4>İpucu 1: Antik Fısıltı</h4>
+                    <p>Bir drama liderinin sesi, geçmişten gelen bir bilgelikle yankılanır: "Her an, yeni bir sahnedir. Rolünüzü iyi ezberleyin, ancak kalbinizle oynayın."</p>
+                </div>
+                <div class="clue-item" data-clue="clue2">
+                    <i class="fas fa-question-circle"></i>
+                    <h4>İpucu 2: Renklerin Dansı</h4>
+                    <p>Mavinin derinliği, kırmızının tutkusu, hayatın sahnesinde birleştiğinde ortaya çıkan o gizemli renk nedir?</p>
+                </div>
+                <div class="clue-item" data-clue="clue3">
+                    <i class="fas fa-brain"></i>
+                    <h4>İpucu 3: Fısıltıdan Seslere</h4>
+                    <p>20.000'den fazla kişinin kalbine dokunan o ilk adım, tek bir kelimeyle özetlenmeli. Bu, bir başlangıcın ve bir değişimin sembolü.</p>
+                </div>
+            </div>
+
+            <button id="revealCipherBtn" class="btn-primary">Şifreyi Çöz!</button>
+            <div id="cipherResult" class="cipher-result">
+                </div>
         </div>
     </section>
 
@@ -162,6 +195,9 @@
         document.addEventListener('DOMContentLoaded', () => {
             const navToggle = document.querySelector('.nav-toggle');
             const mainNav = document.querySelector('.main-nav');
+            const revealCipherBtn = document.getElementById('revealCipherBtn');
+            const cipherResult = document.getElementById('cipherResult');
+            const siteTitle = document.querySelector('.site-title'); // Yeni eklenen site başlığı
 
             if (navToggle && mainNav) {
                 navToggle.addEventListener('click', () => {
@@ -196,6 +232,37 @@
                     header.classList.remove('scrolled');
                 }
             });
+
+            // Gamification Logic
+            const clues = {
+                clue1: "SAHNE", // Her an yeni bir sahne
+                clue2: "MOR", // Mavi + Kırmızı = Mor (Gizemli renk)
+                clue3: "TOHUM" // İlk adım, başlangıç, değişim
+            };
+
+            const cipherSolution = "SANATIN TOHUMU MOR SAHNEDE YEŞERİR"; // Sanatın Tohumu Mor Sahnede Yeşerir
+
+            revealCipherBtn.addEventListener('click', () => {
+                let currentSolution = "";
+                // Bu kısımda daha interaktif bir çözüm mekanizması eklenebilir.
+                // Örneğin, ipuçlarına tıklayınca bir harf açığa çıkarma veya bir formda yanıt toplama gibi.
+                // Şimdilik direkt olarak şifreyi göstereceğiz.
+                currentSolution = cipherSolution;
+
+                if (currentSolution === cipherSolution) {
+                    cipherResult.innerHTML = `<p class="solved-cipher">Tebrikler! Şifreyi çözdünüz:<br><strong>"${cipherSolution}"</strong></p><p>Yaratıcılığın gücü, her birimizin içinde filizlenir ve en beklenmedik anlarda bile sahnedeki yerini alır. Bu şifre, Yaratıcı Drama Harekatı'nın temel felsefesini simgeler: Herkesin içinde bir sanatçı vardır ve bu sanatçı özgürce ifadesini bulduğu zaman, hayatın kendisi bir sanat eserine dönüşür.</p><p>Siz de bu keşif yolculuğuna katılın ve kendi sanatınızın tohumunu ekin!</p>`;
+                    cipherResult.classList.add('active');
+                } else {
+                    cipherResult.innerHTML = `<p class="unsolved-cipher">Henüz doğru şifreye ulaşamadınız. İpuçlarını tekrar gözden geçirin!</p>`;
+                    cipherResult.classList.add('active');
+                }
+            });
+
+            // Site başlığını gizle, logoyu göstermek için
+            const headerLogo = document.querySelector('.header-logo');
+            if (headerLogo) {
+                siteTitle.style.display = 'none';
+            }
         });
     </script>
 </body>
